# wolf3d_modern_cpp

./: .gitignore  CMakeLists.txt
include/stubbed_header/: wolf3d_stubs.h
